# ntrk

./: LICENSE  PLAN.md  README.md  main.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
skills/ntrk/: SKILL.md
src/ntrk/: __init__.py  cli.py  config.py  gitutil.py  hashing.py  parse.py  record.py  store.py
tests/: conftest.py  test_config.py  test_e2e.py  test_gitutil.py  test_hashing.py  test_parse.py  test_review_fixes.py  test_store.py
